--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
 	font-size: 2,5vh;
 }
 
+@media (max-width:600px) {
+	#content{width: unset;}
+	#facebook{width: unset}}
+
 #logo {width: 100%;}
 #logo img {padding-top:3vh; padding-bottom: 3vh;}
 
@@ -10,6 +14,9 @@ body {
 #menu a {width:15%; font-size: 3vh;}
 #menu .active {font-weight: 600; background-color: white; color:black; opacity: 0.5;}
 
-#content {margin-left: auto; margin-right: auto; width: 40%; padding: 2vh;}
+#content {margin-left: auto; margin-right: auto; width: 40%; padding: 2vh; vertical-align: top;}
 #content ul {padding-left:0; list-style: none}
 #content li:first-of-type {margin-left: -2.5em}
+#content td:first-of-type {text-align: left;}
+#content td {padding-left: 1em; padding-right: 1em;}
+#content td b {font-size:110%}
