--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 @media (max-width:600px) {
+	#home {margin:2% !important}
 	#content {width: unset;}
 	#content td {padding-left:0.5em;}
 	#jidelni-listek, #napojovy-listek {padding:0}
-	#facebook {width: unset}
+	#facebook {padding:0 !important;}
 }
 
 body {
@@ -33,3 +34,5 @@ h6 {font-size: 1em}
 #content td:last-of-type {width: 6em !important; text-align: right; padding-right: 1em}
 #content td {padding-left: 1em;}
 #content td b {font-size:110%}
+
+#facebook {padding-left: 10%;padding-right: 10%}
