--- a/style.css
+++ b/style.css
@@ -1,38 +1,110 @@
 @media (max-width:600px) {
-	#home {margin:2% !important}
-	#content {width: unset;}
-	#content td {padding-left:0.5em;}
-	#jidelni-listek, #napojovy-listek {padding:0}
-	#facebook {padding:0 !important;}
+    #content {
+        width: unset;
+    }
+    #content td {
+        padding-left: 0.5em;
+    }
+    #jidelni-listek,
+    #napojovy-listek {
+        padding: 0
+    }
+    #facebook {
+        padding: 0 !important;
+    }
 }
 
 body {
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 1em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1em;
 }
 
-h1 {font-size: 2em}
-h2 {font-size: 1.8em}
-h3 {font-size: 1.6em}
-h4 {font-size: 1.4em}
-h5 {font-size: 1.2em}
-h6 {font-size: 1em}
+h1 {
+    font-size: 2em
+}
 
-#logo {width: 100%;}
-#logo img {padding-top:3vh; padding-bottom: 3vh;}
+h2 {
+    font-size: 1.8em
+}
 
-#menu {width: 100%}
-#menu a {width:15%; font-size: 1.5em;}
-#menu .active {font-weight: 600; background-color: white; color:black; opacity: 0.5;}
+h3 {
+    font-size: 1.6em
+}
 
-#content {margin-left: auto; margin-right: auto; width: 40%; padding: 2vh; vertical-align: top;}
-#content ul {padding-left:0; list-style: none; width: 10em; margin-left: auto; margin-right: auto}
-#content li {padding: 0.25em 0.5em !important}
-#content td:first-of-type {text-align: left;}
-#jidelni-listek td:first-of-type {width: 75%;}
-#napojovy-listek td:first-of-type {width: 75%;}
-#content td:last-of-type {width: 6em !important; text-align: right; padding-right: 1em}
-#content td {padding-left: 1em;}
-#content td b {font-size:110%}
+h4 {
+    font-size: 1.4em
+}
 
-#facebook {padding-left: 10%;padding-right: 10%}
+h5 {
+    font-size: 1.2em
+}
+
+h6 {
+    font-size: 1em
+}
+
+#logo {
+    width: 100%;
+    padding-top: 3vh;
+    padding-bottom: 3vh;
+}
+
+#menu {
+    width: 100%
+}
+
+#menu a {
+    width: 15%;
+    font-size: 1.5em;
+}
+
+#menu .active {
+    font-weight: 600;
+    background-color: white;
+    color: black;
+    opacity: 0.5;
+}
+
+#content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    padding: 2vh;
+    vertical-align: top;
+}
+
+#content ul {
+    padding-left: 0;
+    list-style: none;
+    width: 10em;
+    margin-left: auto;
+    margin-right: auto
+}
+
+#content li {
+    padding: 0.25em 0.5em !important
+}
+
+tr>td:first-of-type {
+    width: 75%;
+    text-align: left;
+}
+
+tr>td:last-of-type {
+    width: 6em !important;
+    text-align: right;
+    padding-right: 1em
+}
+
+table td {
+    padding-left: 1em;
+}
+
+#content td b {
+    font-size: 110%
+}
+
+#facebook {
+    margin-left: auto;
+    margin-right: auto;
+}
